--- a/css/index.css
+++ b/css/index.css
@@ -135,27 +135,31 @@ container{
 }
  /* NO CSS for head!! */
 
-.body{
-  align-items: center;
-  max-width: 100px;
-  margin: 0 auto;
-  background-color: azure;
+body{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
-.nav{
+nav{
   flex-direction: row;
   justify-content: flex-end;
   font-size: 20px;
-
+  align-items: flex-start;
+  align-content: flex-start;
+  max-width: 100px;
+  margin: 0 auto;
+  background-color: azure;
+  
   
 }
-.header{
+header{
   max-width: 85%;
-  border: 1 px dashed black;
-  flex-direction: row;
+  border: 1px dashed black;
+  flex-direction: column;
 }
 
-.h1{
+h1{
   font-size: 40px;
   padding: 5px;
 }
@@ -165,7 +169,6 @@ container{
 }
 
 .main{
-  display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   width: 100%;
