--- a/css/index.css
+++ b/css/index.css
@@ -128,50 +128,68 @@ table {
   border-spacing: 0;
 }
 /* Coding Starts here */
+/* include Nav, Header, Main (section, article[section tag, used to use div article replaces div], 
+p, images, buttons, etc.) Address then Footer. 
+GLOBAL STYLES*/
 
-container{
-  width: 800px;
-  margin: auto;
+body{
+  box-sizing: border-box;
+  max-width: 800px;
+  margin: 0 auto;
 }
  /* NO CSS for head!! */
 
-body{
+nav{
+  width: 100px;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  justify-content: flex-end;
+  font-size: 16px;
+  background-color: azure;
 }
 
-nav{
-  flex-direction: row;
+ul{
+  width: 30%;
+  display: flex;
   justify-content: flex-end;
-  font-size: 20px;
-  align-items: flex-start;
-  align-content: flex-start;
-  max-width: 100px;
-  margin: 0 auto;
-  background-color: azure;
-  
-  
 }
 header{
-  max-width: 85%;
+  display: flex;
+  max-width: 100%;
   border: 1px dashed black;
-  flex-direction: column;
+  background-color: palevioletred;
+}
+
+header div{
+  width: 50%;
 }
 
 h1{
   font-size: 40px;
-  padding: 5px;
+  margin-bottom: 5px;
 }
 
-.p{
+header p{
+  color: teal;
+}
+
+header img{
+  outline: 1px solid blueviolet;
+  width: 50%;
+  margin: 10px;
+  padding: 10px;
+  background-color: pink;
+}
+
+p{
   font-size: 10px;
 }
 
 .main{
+  display: flex;
+  width: 100%;
+  padding: 10px;
   flex-direction: column;
   justify-content: space-evenly;
-  width: 100%;
   border: 1px solid black;
   background-color: beige;
 }
@@ -185,9 +203,10 @@ h1{
 .article{
   width: 75%;
   margin: 10px 0;
+  flex-direction: column;
 }
 
-.first{
+.first section{
 display: flex;
 flex-direction: column-reverse;
 justify-content: space-between;
