--- a/css/index.css
+++ b/css/index.css
@@ -140,8 +140,8 @@ body{
  /* NO CSS for head!! */
 
 nav{
-  width: 100px;
   display: flex;
+  width: 80%;
   justify-content: flex-end;
   font-size: 16px;
   background-color: azure;
@@ -154,7 +154,7 @@ ul{
 }
 header{
   display: flex;
-  max-width: 100%;
+  max-width: 85%;
   border: 1px dashed black;
   background-color: palevioletred;
 }
@@ -170,72 +170,88 @@ h1{
 
 header p{
   color: teal;
+  justify-content: flex-end;
 }
 
 header img{
   outline: 1px solid blueviolet;
   width: 50%;
   margin: 10px;
-  padding: 10px;
+  padding: 5px;
   background-color: pink;
 }
 
 p{
   font-size: 10px;
+  flex-wrap: wrap;
+  padding: 30px;
+  justify-content: center;
+  border: 2px dashed purple;
 }
 
-.main{
-  display: flex;
+main{
+  flex-direction: column;
   width: 100%;
-  padding: 10px;
-  flex-direction: column;
-  justify-content: space-evenly;
-  border: 1px solid black;
-  background-color: beige;
-}
-
-.section{
-  width: 40%;
-  border: 1px solid blueviolet;
-  padding: 5px;
-}
-
-.article{
-  width: 75%;
-  margin: 10px 0;
-  flex-direction: column;
+  justify-content: center;
 }
 
 .first section{
-display: flex;
-flex-direction: column-reverse;
-justify-content: space-between;
-align-items: center;
-padding: 5px;
-background-color: cornflowerblue;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
+  background-color: cornflowerblue;
 }
 
 .first article{
-display: flex;
-background-color: thistle;
+  display: flex;
+  width: 85%;
+  flex-direction: column;
+  background-color: thistle;
+}
+
+.second section{
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
+  background-color: cornflowerblue;
+}
+.second article{
+  display: flex;
+  width: 85%;
+  flex-direction: column;
+  background-color: thistle;
+
 }
 
 .first > :first-child{
-background-color: honeydew;
+  background-color: honeydew;
 }
 
 .first > :last-child{
-background-color: teal;
+  background-color: teal;
 }
 
 .first > :nth-child(2){
-background-color: yellow;
+  background-color: yellow;
 }
 
 .first > :nth-child(3){
-background-color: dodgerblue;
+  background-color: dodgerblue;
+}
+div img{
+  outline: 1px solid orange;
+  width: 85%;
+  margin: 10px;
+  padding: 5px;
+  background-color: lightyellow;
 }
 
-.footer{
+footer{
   text-align: center;
+  padding: 5px;
+  margin: 10px 0;
 }
